--- a/space_invaders/templates/space_invaders/space-invaders.html
+++ b/space_invaders/templates/space_invaders/space-invaders.html
@@ -1,15 +1,86 @@
 {% extends "base.html" %}
 {% load static %}
-{% load cloudinary %}
 
-{% block title %} Home {% endblock %}
+{% block space_invaders_css %}
+    <link rel="stylesheet" href="{% static 'css\space_invaders\space_invader.css' %}">
+{% endblock %}
+
+{% block space_invaders_js %}
+    <script src="{% static 'js\space_invaders\space_invaders.js' %}"></script>
+{% endblock %}
+
+{% block title %}Space Invaders{% endblock %}
+
 {% block content %}
-
-<div class="container-fluid mb-4 text-center">
-    <h1 class="text-dark">Space Invaders</h1>
-    <a href="{% url 'index' %}">
-        <h2 class="text-black mb-4">Home</h2>
-    </a>
-    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo">
+<div class="container mb-4 text-center justify-content-center">      
+            <div class="row mb-2">
+                <div class="col-12 d-flex justify-content-center">
+                    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo">
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col col-md-12">
+                    <div class="card bg-black text-white text-center scorecard mt-4" style="display: none;">
+                        <h2 class="score scoreboard mt-2" style="display: none;">Score</h2> 
+                        <h2 class="results scoreboard" style="display: none;"> 0</h2>
+                       
+                        <div class="col col-md-12 mt-4">
+                            <h2 class="recordResult" style="display: none;">RECORD YOUR SCORE BELOW! <br> <i class="fa-solid fa-arrow-down" style="color: #ffffff;"></i></h2>
+                        </div>
+                        <div class="col col-md-12">
+                            <form class="form mt-6" method="post" style="display: none;">
+                                {% csrf_token %}
+                                <div class="form-group d-flex justify-content-center"> 
+                                    <input type="text" name="user_name" placeholder="Enter your name" class="mt-2 styled-input border-4 border-success rounded">
+                                </div>
+                                <div class="form-group"> 
+                                    <input type="hidden" name="score" id="scoreInput">
+                                </div>
+                                <div class="form-group d-flex justify-content-center"> 
+                                    <button type="submit" class="btn btn-success text-white w-50">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-12 d-flex align-items-center justify-content-center">
+                            <button class="btn btn-lg btn-danger mt-4 mb-4" id="resetBtn" style="display: none;">Reset Game</button>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="card text-white text-center leaderboard">
+                    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo">
+                    <div class="level-selection mt-2">
+                        <label for="level"><h4>Select Level:</h4></label>
+                        <br>
+                        <select class="w-100 text-center form-select fs-4 font-weight-bold" id="level" name="level">
+                            <option value="1" class="font-weight-bold">Level 1</option>
+                            <option value="2" class="font-weight-bold">Level 2</option>
+                            <option value="3" class="font-weight-bold">Level 3</option>
+                            <option value="4" class="font-weight-bold">Level 4</option>
+                            <option value="5" class="font-weight-bold">Level 5</option>
+                            <option value="6" class="font-weight-bold">Extreme</option>
+                        </select>
+                    </div>
+                    <button class="btn btn-lg btn-light border border-danger mt-4 text-dark" id="startBtn"><strong>Start Game</strong> </button>
+                   
+                    <h2 class="leaderboard text-white text-decoration-underline"><strong>Leaderboards</strong></h2>
+                    <ul class="leaderboard">
+                        {% for game_score in game_scores %}
+                            <li><h5><strong>{{ game_score.user_name }} - {{ game_score.score }}</strong></h5><p><small class="small-text">{{ game_score.created_at }}</small></p></li>
+                        {% endfor %}
+                    </ul>
+                    <a href="{% url 'space_invaders_leaderboard' %}" class="btn btn-lg btn-info mb-4 border border-light">
+                        <strong>View All</strong>
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <div class="grid"></div>
+                </div>
+            </div>
 </div>
+
 {% endblock %}
