Add styling to images within space invaders

--- a/space_invaders/templates/space_invaders/space-invaders.html
+++ b/space_invaders/templates/space_invaders/space-invaders.html
@@ -15,7 +15,7 @@
 <div class="container mb-4 text-center justify-content-center">      
             <div class="row mb-2">
                 <div class="col-12 d-flex justify-content-center">
-                    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo">
+                    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo" class="img-fluid main-banner-game">
                 </div>
             </div>
             <div class="row mt-4">
