--- a/static/css/space_invaders/space_invader.css
+++ b/static/css/space_invaders/space_invader.css
@@ -118,3 +118,15 @@ body, h1 {
         height: 25px;
     }
 }
+
+@media screen and (max-width: 405px) {
+    .grid {
+        width: 300px;
+        height: 300px;
+    }
+    .grid div {
+        justify-content: center;
+        width: 20px;
+        height: 20px;
+    }
+}
