--- a/space_invaders/templates/space_invaders/space-invaders.html
+++ b/space_invaders/templates/space_invaders/space-invaders.html
@@ -76,9 +76,15 @@
                     </a>
                 </div>
             </div>
-            <div class="row mt-4">
+            <div class="row mt-4 mb-4">
                 <div class="col-12 d-flex align-items-center justify-content-center">
                     <div class="grid"></div>
+                </div>
+            </div>
+            <div class="row mt-4 mb-4">
+                <div class="col-12 d-flex align-items-center justify-content-center">
+                    <button class="btn btn-lg btn-primary mr-2 d-lg-none" id="moveLeftBtn"><i class="fa-solid fa-left-long" style="color: #ffffff;"></i></button>
+                    <button class="btn btn-lg btn-primary ml-2 d-lg-none" id="moveRightBtn"><i class="fa-solid fa-right-long" style="color: #ffffff;"></i></button>
                 </div>
             </div>
 </div>
