--- a/space_invaders/templates/space_invaders/space-invaders.html
+++ b/space_invaders/templates/space_invaders/space-invaders.html
@@ -83,8 +83,8 @@
             </div>
             <div class="row mt-4 mb-4">
                 <div class="col-12 d-flex align-items-center justify-content-center">
-                    <button class="btn btn-lg btn-primary mr-2 d-lg-none" id="moveLeftBtn"><i class="fa-solid fa-left-long" style="color: #ffffff;"></i></button>
-                    <button class="btn btn-lg btn-primary ml-2 d-lg-none" id="moveRightBtn"><i class="fa-solid fa-right-long" style="color: #ffffff;"></i></button>
+                    <button class="btn btn-lg btn-danger mr-2 d-lg-none" id="moveLeftBtn"><i class="fa-solid fa-left-long" style="color: #ffffff;"></i></button>
+                    <button class="btn btn-lg btn-danger ml-2 d-lg-none" id="moveRightBtn"><i class="fa-solid fa-right-long" style="color: #ffffff;"></i></button>
                 </div>
             </div>
 </div>
