--- a/templates/includes/footer/main-footer.html
+++ b/templates/includes/footer/main-footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small blue">
+<footer id="main-footer" class="page-footer font-small blue">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
