--- a/templates/includes/footer/main-footer.html
+++ b/templates/includes/footer/main-footer.html
@@ -1,9 +1,9 @@
 <!-- Footer -->
-<footer id="main-footer" class="page-footer font-small bg-dark">
+<footer id="main-footer" class="page-footer font-small bg-primary">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://github.com/DiarmuidSheeran" target="_blank"> Diarmuid Sheeran</a>
+      <a href="https://github.com/DiarmuidSheeran" target="_blank" class="text-light"> Diarmuid Sheeran</a>
     </div>
     <!-- Copyright -->
   
