--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@700&display=swap');
+
 footer {
     position: fixed;
     bottom: 0;
@@ -12,3 +15,11 @@ body {
 body, h1{
     color:rgb(246, 245, 247);
   }
+
+.header-fonts {
+  font-family: "Gemunu Libre", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+  
