Create Virtual Enviorment, Edit base allautgh template

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "templates/allauth/account/base.html" %}
+{% load static %}
 {% load i18n %}
 {% load allauth account %}
 {% block head_title %}
