--- a/templates/includes/nav/main-nav.html
+++ b/templates/includes/nav/main-nav.html
@@ -19,11 +19,29 @@
             <a class="dropdown-item" href="{% url 'index' %}">Home</a>
           </div>
         </li>
+        {% if request.user.is_authenticated %}
+          <li class="nav-item active d-inline-block">
+            <a class="nav-link" href="{% url 'profile' %}">Profile <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active d-inline-block">
+            <a class="nav-link" href="{% url 'account_logout' %}">Logout <span class="sr-only">(current)</span></a>
+          </li>
+          {% else %}
+          <li class="nav-item active d-inline-block">
+            <a class="nav-link" href="{% url 'account_signup' %}">Sign Up <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active d-inline-block">
+            <a class="nav-link" href="{% url 'account_login' %}">Login <span class="sr-only">(current)</span></a>
+          </li>
+          {% endif %}
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
       </form>
+      <ul class="navbar-nav">
+          
+      </ul>
     </div>
   </nav>
   <hr>
