--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -4,21 +4,120 @@
 {% block title %}Profile{% endblock %}
 
 {% block content %}
-    <div class="container mb-4 text-center justify-content-center">  
-        <h1>Retro Games</h1>
-        <h3>User Profile</h3>
-        <h5>Username: {{ profile.user.username }}</h5>
-        <p>Bio: {{ profile.bio }}</p>
-        
-        <h3>Game Scores</h3>
-        <ul>
-            {% if profile.user.gamescore_set.all %}
-                {% for game_score in profile.user.gamescore_set.all %}
-                    <li>{{ game_score.score }} - {{ game_score.created_at }}</li>
-                {% endfor %}
-            {% else %}
-                <li>No game scores yet.</li>
-            {% endif %}
-        </ul>
+    <div class="container mb-4">
+        <div class="row">
+           <div class="col">
+                <h1>Retro Games</h1>
+                <h3>User Profile</h3>
+                <br>
+           </div> 
+        </div>
+
+        <div class="row mb-4 text-dark">
+            <div class="col-md-3 mb-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title" style="border-bottom: dashed black 2px;"><i class="fa-solid fa-user-ninja" style="color: #ff0000;"></i> Username:</h5>
+                        <p class="card-text">{{ profile.user.username }}</p> 
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9 mb-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title" style="border-bottom: dashed black 2px;"><i class="fa-solid fa-comment-dots fa-flip-horizontal" style="color: #ff0000;"></i> Bio:</h5>
+                        <p class="card-text">{{ profile.bio }}</p>
+                    </div>
+                </div>
+            </div>
+         </div>
+       
+         <div class="row text-center justify-content-center">
+            <div class="col">
+                <h3>Game Score Records <i class="fa-solid fa-dice" style="color: #ff00dd;"></i></h3>
+                <br>
+            </div> 
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-md-4 mb-3">
+                <div class="card bg-warning">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Space Invaders</h5>
+                        <ul class="list-unstyled" id="game-scores">
+                            {% for game_score in profile.user.gamescore_set.all %}
+                                {% if forloop.counter <= 4 %}
+                                    <li class="border-bottom border-dark mb-2"><strong>Score: {{ game_score.score }}</strong> <br>{{ game_score.created_at }}</li>
+                                {% else %}
+                                    <li class="border-bottom border-dark d-none more-scores mb-2"><strong>Score: {{ game_score.score }}</strong> <br>{{ game_score.created_at }}</li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
+                        {% if profile.user.gamescore_set.all.count > 4 %}
+                            <button class="btn btn-primary btn-block mt-3" id="expandButton">Show More Scores</button>
+                        {% endif %}
+                        <button class="btn btn-secondary btn-block mt-3 d-none" id="closeButton">Close</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card bg-danger">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Space Invaders</h5>
+                        <ul class="list-unstyled">
+                            {% if profile.user.gamescore_set.all %}
+                                {% for game_score in profile.user.gamescore_set.all %}
+                                    <li class="border-bottom border-light mb-2"><strong>Score: {{ game_score.score }}</strong> <br>{{ game_score.created_at }}</li>
+                                {% endfor %}
+                            {% else %}
+                                <li>No game scores yet.</li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card bg-info">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Space Invaders</h5>
+                        <ul class="list-unstyled">
+                            {% if profile.user.gamescore_set.all %}
+                                {% for game_score in profile.user.gamescore_set.all %}
+                                    <li class="border-bottom border-light mb-2"><strong>Score: {{ game_score.score }}</strong> <br>{{ game_score.created_at }}</li>
+                                {% endfor %}
+                            {% else %}
+                                <li>No game scores yet.</li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+         </div>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+        var expandButton = document.querySelector("#expandButton");
+        var closeButton = document.querySelector("#closeButton");
+        var hiddenScores = document.querySelectorAll(".more-scores");
+
+        expandButton.addEventListener("click", function() {
+            hiddenScores.forEach(function(score) {
+                score.classList.remove("d-none");
+            });
+            expandButton.classList.add("d-none"); 
+            closeButton.classList.remove("d-none"); // Show the close button
+        });
+
+        closeButton.addEventListener("click", function() {
+            hiddenScores.forEach(function(score) {
+                score.classList.add("d-none");
+            });
+            closeButton.classList.add("d-none"); // Hide the close button
+            expandButton.classList.remove("d-none"); // Show the expand button
+        });
+    });
+    </script>
 {% endblock %}
+
+
