Fix font awsome bug and edit profile template

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -9,7 +9,7 @@
     <div class="card bg-warning mt-2 border border-light rounded pt-2 pb-2">
         <strong><h1 class="text-dark header-fonts">Retro Arcade</h1></strong>
         <strong><h4 class="text-dark text-light header-fonts">Choose a Game Below!</h4></strong>
-        <strong><i class="fa-sharp fa-solid fa-arrow-down fa-bounce fa-xl mb-4 mt-2 header-fonts" style="color: #000000;"></i></strong>
+        <strong><i class="fa-solid fa-arrow-down fa-2xl" style="color: #000000;"></i></strong>
     </div>
     <div class="card bg-danger mt-2 border border-light rounded pt-2 pb-2">
         <a href="{% url 'space_invaders' %}">
