--- a/space_invaders/templates/space_invaders/space-invaders.html
+++ b/space_invaders/templates/space_invaders/space-invaders.html
@@ -49,33 +49,39 @@
         </div>
     </div>
     <div class="row">
-        <div class="card text-white text-center leaderboard">
-            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo" class="mb-4">
-            
-            <div class="level-selection mt-2 bg-danger border border-light rounded pt-1 text-light">
-                <label for="level"><h4><strong>Select Level:</strong></h4><small><strong>Scores Multiply by Level Difficulty</strong></small></label>
-                <select class="w-100 bg-light text-center form-select fs-4 font-weight-bold" id="level" name="level">
-                    <option value="1" class="font-weight-bold">Level 1</option>
-                    <option value="2" class="font-weight-bold">Level 2</option>
-                    <option value="3" class="font-weight-bold">Level 3</option>
-                    <option value="4" class="font-weight-bold">Level 4</option>
-                    <option value="5" class="font-weight-bold">Level 5</option>
-                    <option value="6" class="font-weight-bold">Extreme</option>
-                </select>
-                <button class="btn btn-lg btn-danger border border-light mt-2 mb-2 text-light" id="startBtn"><strong>Start Game</strong> </button>
+        <div class="col col-md-12">
+            <div class="card text-white text-center leaderboard">
+                <div class="bg-danger">
+                    <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1710969198/space-invaders-logo_bhjso2.png' }}" alt="Space Invaders Logo" class="mb-4">
+                </div>
+                <div class="w-100 level-selection text-light mt-2 bg-warning text-dark">
+                    <label for="level"><h4><strong>Select Level:</strong></h4></label>
+                    <select class="mr-2 w-100 text-center mb-2" id="level" name="level">
+                        <option value="1" class="font-weight-bold">Level 1</option>
+                        <option value="2" class="font-weight-bold">Level 2</option>
+                        <option value="3" class="font-weight-bold">Level 3</option>
+                        <option value="4" class="font-weight-bold">Level 4</option>
+                        <option value="5" class="font-weight-bold">Level 5</option>
+                        <option value="6" class="font-weight-bold">Extreme</option>
+                    </select>
+                    <br>
+                    <button class="btn btn-danger border border-light mb-2 text-light" id="startBtn"><strong>Start Game</strong> </button>
+                    <br>
+                    <small><strong>Scores Multiply by Level Difficulty</strong></small>
+                    <br>
+                    
+                </div>
+                
+                <h2 class="leaderboard text-dark text-decoration-underline pb-3 mt-2 bg-light" style="border-bottom: red 4px solid; border-top: red 4px solid;"><strong>Leaderboards</strong> <i class="fa-solid fa-crown" style="color: #FFD43B;"></i></h2>
+                <ul class="leaderboard">
+                    {% for game_score in game_scores %}
+                        <li><h5><strong>{{ game_score.user_name }} - {{ game_score.score }}</strong></h5><p><small class="small-text">{{ game_score.created_at }}</small></p></li>
+                    {% endfor %}
+                </ul>
+                <a href="{% url 'space_invaders_leaderboard' %}" class="btn btn-light mb-4 border border-danger">
+                    <strong>View All</strong>
+                </a>
             </div>
-            
-            
-            
-            <h2 class="leaderboard text-white text-decoration-underline"><strong>Leaderboards</strong></h2>
-            <ul class="leaderboard">
-                {% for game_score in game_scores %}
-                    <li><h5><strong>{{ game_score.user_name }} - {{ game_score.score }}</strong></h5><p><small class="small-text">{{ game_score.created_at }}</small></p></li>
-                {% endfor %}
-            </ul>
-            <a href="{% url 'space_invaders_leaderboard' %}" class="btn btn-secondary mb-4 border border-light">
-                <strong>View All</strong>
-            </a>
         </div>
     </div>
     <div class="row mt-4 mb-4">
