Update styling of the login page

--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,27 +1,33 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container d-flex justify-content-center align-items-center">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>{% trans "Sign Up" %}</h1>
-
-            <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-                {% csrf_token %}
-                {{ form.as_p }}
-                {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                {% endif %}
-                <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-            </form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card border border-light rounded">
+                <div class="card-header bg-primary text-white text-center">
+                    <h1 class="mb-0">{% trans "Sign Up" %}</h1>
+                </div>
+                <div class="card-body bg-secondary">
+                    <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}" class="text-warning">sign in</a>.{% endblocktrans %}</p>
+                    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        {% if redirect_field_value %}
+                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                        {% endif %}
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 {% endblock %}
+
 
