Create and set up pacman app

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -18,8 +18,12 @@
     </div>
     <div class="card bg-success mt-2 border border-light rounded pt-2 pb-2">
         <h2>Game in Development</h2>
-        <a href="#">
-            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711487172/coming-soon_izekzy.png' }}" alt="Space Invaders Logo" class="img-fluid">
+        <a href="{% url 'pacman' %}">
+            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711740827/pacman-logo_ylvrpu.png' }}" alt="PacMan Logo" class="img-fluid mt-2">
+            <img src="{{ 'https://res.cloudinary.com/drmbgol8n/image/upload/v1711487172/coming-soon_izekzy.png' }}" alt="Coming Soon" class="" style="width: 191px; height: 195px;">
+            
+            
+            
         </a>
     </div>
     <div class="card bg-info mt-2 border border-light rounded pt-2 pb-2">
